调整了四段工作流程
